@@ -1,17 +1,16 @@
-SUBDIRS = src src/tools
+SUBDIRS = src src/tools msvc
 
 EXTRA_DIST = data/autocorrect/fi_FI.xml data/autocorrect/autocorrect.dtd \
     python/libvoikko.py python/libvoikkoTest.py \
     python/libvoikkoOld.py python/libvoikkoOldTest.py \
     python/ExtendedMorphologyTest.py \
     python/Utf8ApiTest.py \
-    python/DeperacatedApiTest.py \
+    python/DeprecatedApiTest.py \
     python/NullComponentTest.py \
     python/ApertiumIcelandicTest.py \
     doc/morphological-analysis.txt \
     doc/oikoluku-korjausehdotukset.txt \
-    autogen.sh \
-    libvoikko.vcproj
+    autogen.sh
 
 ACLOCAL_AMFLAGS = -I m4
 
