@@ -1,0 +1,2 @@
+EXTRA_DIST = libvoikko.sln libvoikko.vcproj voikkogc.vcproj voikkohyphenate.vcproj voikkospell.vcproj
+
