@@ -17,7 +17,6 @@
  *********************************************************************************/
 
 #include "setup/DictionaryLoader.hpp"
-#include "config.h"
 #include "porting.h"
 #include <string>
 #include <fstream>
